# sortweb

./: Cargo.toml  README.md  index.html  sort_visualiser-266eb98062fd475.js  sort_visualiser-266eb98062fd475_bg.wasm  sort_visualiser-939a8daf0ea8f21f.js  sort_visualiser-939a8daf0ea8f21f_bg.wasm  sw.js
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: app.rs  bubble.rs  heap.rs  insertion.rs  lib.rs  main.rs  shaker.rs  shell.rs
